--- a/ERPWeb/Views/AgroConfiguration/SalesPaymentList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesPaymentList.cshtml
@@ -104,7 +104,7 @@
 <div class="modal" id="Paymentmodal" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header bg-navy">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
@@ -157,7 +157,7 @@
             </div>
 
 
-            <div class="col-md-12" style="background-color:#e7f1f6">
+            <div class="col-md-12">
                 <div class="container" @*style="background-color:#e7f1f6"*@>
                     @*border-right:4px solid #808080*@
 
@@ -211,7 +211,7 @@
 
 
 
-            <div class="modal-footer  bg-navy" >
+            <div class="modal-footer  bg-gradient-gray-dark" >
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
                         Data has been saved Successful!
