--- a/ERPWeb/Views/AgroConfiguration/AreaList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/AreaList.cshtml
@@ -78,7 +78,7 @@
 <div class="modal" id="AreaModal" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
@@ -110,7 +110,7 @@
 
 
             </div>
-            <div class="modal-footer btn-light">
+            <div class="modal-footer btn-light bg-gradient-gray-dark">
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
                         Data has been Successfully Saved
