--- a/ERPWeb/Views/AgroConfiguration/GetDivisionInfo.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetDivisionInfo.cshtml
@@ -81,7 +81,7 @@
 <div class="modal" id="DivisionModal" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
@@ -94,11 +94,7 @@
 
                     </div>
 
-                    @*<div class="col-md-10">
-                    <label for="ddlDivisionName" class="control-label">Division Name</label>
-                    @Html.DropDownList("ddlDivisionNameInput", (IEnumerable<SelectListItem>)ViewBag.ddlDivisionName, "--Select Zone--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
-                </div>*@
 
                     <div class="col-md-10">
                         <label for="txtDivisionName" class="control-label">DivisionName</label>
@@ -116,7 +112,7 @@
                 </form>
             </div>
 
-            <div class="modal-footer btn-default">
+            <div class="modal-footer btn-default bg-gradient-gray-dark">
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
                         Data has been Successfully Saved
