--- a/ERPWeb/Views/AgroConfiguration/Territorylist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/Territorylist.cshtml
@@ -67,7 +67,7 @@
 <div class="modal" id="territorymodal" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
@@ -99,7 +99,7 @@
             </div>
 
 
-            <div class="modal-footer btn-default">
+            <div class="modal-footer btn-default bg-gradient-gray-dark">
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
                         Data has been saved Successful!
