--- a/ERPWeb/Views/AgroConfiguration/DateWiseCollection.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DateWiseCollection.cshtml
@@ -54,17 +54,18 @@
                                 @Html.DropDownList("ddlDivisionName", (IEnumerable<SelectListItem>)ViewBag.ddlDivisionName, "Division", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             </div>
                             <div class="col-md-2">
-                                @Html.DropDownList("ddlRegionname", (IEnumerable<SelectListItem>)ViewBag.ddlStokiestName, "Region", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                @Html.DropDownList("ddlRegionname", (IEnumerable<SelectListItem>)ViewBag.ddlRegionname, "Region", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             </div>
                             <div class="col-md-2">
-                                @Html.DropDownList("ddlareaname", (IEnumerable<SelectListItem>)ViewBag.ddlStokiestName, "Area", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                @Html.DropDownList("ddlareaname", (IEnumerable<SelectListItem>)ViewBag.ddlareaname, "Area", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             </div>
-                            <div class="col-md-2">
-                                @Html.DropDownList("ddlStokiestName", (IEnumerable<SelectListItem>)ViewBag.ddlStokiestName, "Stockiest", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                            </div>
+
 
                             <div class="col-md-2 pad">
                                 @Html.DropDownList("ddlTerritoryName", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "Territory", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger pad" })
+                            </div>
+                            <div class="col-md-2">
+                                @Html.DropDownList("ddlStokiestName", (IEnumerable<SelectListItem>)ViewBag.ddlStokiestName, "Stockiest", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                             </div>
 
                             <div class="col-md-2 pad">
@@ -77,7 +78,7 @@
                             </div>
                             <div class="col-md-2 pad">
                                 <div class="input-group input-group-sm">
-                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed pad" id="dptToDate" placeholder="ToDate" name="dptToDate"  />
+                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed pad" id="dptToDate" placeholder="ToDate" name="dptToDate" />
                                     <div class="input-group-prepend cursor-pointer remove-list-date dptToDate" style="cursor:pointer">
                                         <span class="input-group-text">&#10008;</span>
                                     </div>
@@ -98,8 +99,8 @@
                             </div>
 
                             @*<div class="col-md-1 input-group-append">
-                                    <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
-                                </div>*@
+            <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
+        </div>*@
 
                         </div>
                     </div>
