--- a/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
@@ -14,7 +14,7 @@
                 <th>Production Total</th>
                 <th>Sales Total</th>
                 <th>Return Total </th>
-                <th>Current Stock </th>
+                <th>Current Pices </th>
 
                 @*<th>Action</th>*@
 
