--- a/ERPWeb/Views/AgroConfiguration/SalesPaymentList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesPaymentList.cshtml
@@ -173,7 +173,7 @@
                                     <select id="ddlPaymentMode" class="form-control form-control-sm" select2>
                                         <option value="">Select Mode</option>
                                         <option value="Cash">Cash</option>
-                                        <option value="Check">Check</option>
+                                        <option value="Cheque">Cheque</option>
                                     </select>
                                     <span class="error hide req-ddlPaymentMode">ddlPaymentMode Is Required</span>
                                 </div>
