--- a/ERPWeb/Reports/ERPRpt/Agriculture/rptInvoiceWiseSalesReport.rdlc
+++ b/ERPWeb/Reports/ERPRpt/Agriculture/rptInvoiceWiseSalesReport.rdlc
@@ -1920,49 +1920,10 @@
         </Paragraphs>
         <rd:DefaultName>fromDate</rd:DefaultName>
         <Top>1.01958in</Top>
-        <Left>4.64104in</Left>
+        <Left>4.74703in</Left>
         <Height>0.25in</Height>
         <Width>1.54166in</Width>
         <ZIndex>14</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="Textbox99">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>To</Value>
-                <Style>
-                  <FontSize>11pt</FontSize>
-                  <FontWeight>Bold</FontWeight>
-                  <Color>Green</Color>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style>
-              <TextAlign>Center</TextAlign>
-            </Style>
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox99</rd:DefaultName>
-        <Top>1.015in</Top>
-        <Left>4.3334in</Left>
-        <Height>0.30208in</Height>
-        <Width>0.27986in</Width>
-        <ZIndex>15</ZIndex>
-        <Visibility>
-          <Hidden>=iif(Fields!fromDate.Value="",true, iif(Fields!todate.Value="",true,false))</Hidden>
-        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -1997,7 +1958,7 @@
         <Left>0.16542in</Left>
         <Height>0.29042in</Height>
         <Width>10.98612in</Width>
-        <ZIndex>16</ZIndex>
+        <ZIndex>15</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2031,7 +1992,46 @@
         <Left>0.16542in</Left>
         <Height>0.25in</Height>
         <Width>10.98612in</Width>
+        <ZIndex>16</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox99">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value EvaluationMode="Constant">To</Value>
+                <Style>
+                  <FontSize>11pt</FontSize>
+                  <FontWeight>Bold</FontWeight>
+                  <Color>Green</Color>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Center</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox99</rd:DefaultName>
+        <Top>1.01958in</Top>
+        <Left>4.4293in</Left>
+        <Height>0.25in</Height>
+        <Width>0.29375in</Width>
         <ZIndex>17</ZIndex>
+        <Visibility>
+          <Hidden>=iif(Fields!fromDate.Value="",true, iif(Fields!todate.Value="",true,false))</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
