--- a/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
@@ -28,11 +28,11 @@
             <div class="col-md-12">
                 <div class="card card-gray-dark">
                     <div class="card-header">
-                        <div class="row text-sm">
+                        <div class="row text-sm" >
                             <div class="col-md-2">
                                 <h4>Search by:</h4>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-2" style="margin-left:-40px">
                                 @*<label class="control-label" for="ddlProductName">Product Name</label>*@
                                 @Html.DropDownList("ddlInvoiceNo", (IEnumerable<SelectListItem>)ViewBag.ddlInvoiceNo, "--Invoice --", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
@@ -60,7 +60,20 @@
                                         <span class="input-group-text">&#10008;</span>
                                     </div>
                                 </div>
+
                             </div>
+                            <div class="col-md-1">
+                                <div class="input-group input-group-sm">
+                                    <select class="form-control form-control-sm float-right select2" id="rptType" name="rptType">
+                                        <option value="PDF">PDF</option>
+                                        <option value="EXCEL">EXCEL</option>
+                                    </select>
+                                    <span class="input-group-append">
+                                        <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
+                                    </span>
+                                </div>
+                            </div>
+
                             <div class="col-2">
 
                             </div>
@@ -112,6 +125,7 @@
 
         var dptFromDate = $("#dptFromDate");
         var dptToDate = $("#dptToDate");
+        var rptType = $("#rptType");
 
         $(document).ready(function () {
             $('.select2').select2();
@@ -218,6 +232,17 @@
                 })
             }
         })
+
+
+         $("#btnDownload").click(function () {
+            // if (dptFromDate.val() == "" && dptToDate.val() == "" && ddlInvoiceNo.val() == "" && ddlStockiest.val()=="") {
+            //    bootbox.alert("Please Select Anyone");
+            //}
+            //else {
+                 window.open("/AgroConfiguration/SalesCommissionReport?stockiestId=" + TryParseInt(ddlStockiest.val(), 0) + " &fromDate=" + dptFromDate.val() + " &toDate=" + dptToDate.val() + " &rptType=" + rptType.val() + "&invoiceNo=" + ddlInvoiceNo.val());
+            //}
+        })
+
 
     </script>
 
