--- a/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesCommission.cshtml
@@ -13,6 +13,7 @@
                 <td style="vertical-align:middle">Invoice No</td>
                 <td style="vertical-align:middle">Stockiest Name</td>
                 <td style="vertical-align:middle">Payment Method</td>
+                <td style="vertical-align:middle">Total Amount</td>
                 <td style="vertical-align:middle">Total Commission</td>
                 <td style="vertical-align:middle">Entry Date</td>
                 <td style="vertical-align:middle">Action</td>
@@ -27,24 +28,25 @@
                     badge = item.PaymentMode == "Credit" ? "badge bg-warning" : (item.PaymentMode == "Cash" ? "badge bg-success" : "" );
 
                     sl++;
-                    <tr>
-                        <td class="text-center">@sl</td>
+            <tr>
+                <td class="text-center">@sl</td>
 
-                        <td class="text-center">@item.InvoiceNo</td>
-                        <td class="text-center">@item.StockiestName</td>
-                        <td class="text-center ">
-                            <span class="@badge">@item.PaymentMode</span>
-                        </td>
-                        <td class="text-center">@item.TotalCommission</td>
-                        <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
-                        @*<td class="text-center hide">@item.CommissionOnProductOnSalesId</td>*@
+                <td class="text-center">@item.InvoiceNo</td>
+                <td class="text-center">@item.StockiestName</td>
+                <td class="text-center ">
+                    <span class="@badge">@item.PaymentMode</span>
+                </td>
+                <td class="text-center">@item.TotalAmount</td>
+                <td class="text-center">@item.TotalCommission</td>
+                <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
+                @*<td class="text-center hide">@item.CommissionOnProductOnSalesId</td>*@
 
-                        <td class="text-center">
-                            <a href="#" class="btn btn-outline-warning data-item-detail" title="view" data-item-detail="@item.CommissionOnProductOnSalesId" style="line-height:1">
-                                <i class="fas fa-eye"></i>
-                            </a>
-                        </td>
-                    </tr>
+                <td class="text-center">
+                    <a href="#" class="btn btn-outline-warning data-item-detail" title="view" data-item-detail="@item.CommissionOnProductOnSalesId" style="line-height:1">
+                        <i class="fas fa-eye"></i>
+                    </a>
+                </td>
+            </tr>
                 }
 
             }
